--- a/style.css
+++ b/style.css
@@ -1,8 +1,4 @@
-h1 {
-    background-color: beige;
-    color: black;
-    font-family: cursive;
-    width: 300px;
-    height: 50px;
-
+img {
+    width: 100px;
+    height: 100px;
 }
