--- a/style.css
+++ b/style.css
@@ -1,4 +1,12 @@
-img {
+/* Size of image in css */
+/* img {
     width: 100px;
     height: 100px;
+} */
+/* Aligning images */
+/* img {
+    margin-left:100px ;
+} */
+img {
+    float: right;
 }
